--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 柬埔寨-843.5KB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-187.2KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-10.92MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-582.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇳 中国-778.6KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇺🇸 美国-841.0KB/s(Youtube:不良林), server: su10.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su10.chaoxn.top}}
   - {name: 🇨🇳 中国-2.95MB/s(Youtube:不良林), server: cmgz18.zifaner.top, port: 20918, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
   - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 柬埔寨-843.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-187.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-778.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-841.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-402.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
