--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-10.49MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-285.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇫🇷 法国-582.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-398.2KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.22MB/s(Youtube:不良林), server: m.cvcvcvcv.cyou, port: 26618, type: vmess, uuid: e3238e79-aac4-34bb-a4bd-f956117c95d9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: m.cvcvcvcv.cyou}}
-  - {name: 🇨🇳 中国-5.05MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
-  - {name: 🇨🇳 中国-3.08MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇯🇵 日本-10.49MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇯🇵 日本-321.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-891.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-309.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-285.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-582.6KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.08MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
