--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇫🇷 法国-1000.4KB/s(Youtube:不良林), server: 54.36.174.181, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇭🇰 香港-354.6KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
   - {name: 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-10.49MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.59, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
-  - {name: 🇯🇵 日本-321.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-891.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-309.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-554.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-264.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1000.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-354.6KB/s(Youtube:不良林)
       - 🇭🇰 (已存活2天)香港-4.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-321.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇯🇵 日本-891.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-309.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-554.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
